--- a/index.html
+++ b/index.html
@@ -99,14 +99,11 @@
 				</section>
 				<section>
 					<h2>Lower the Barrier, Not Standards</h2>
-					<p>
-                                        <strong>Claude Steele, Whistling Vivaldi</strong>
-				</section>
-					</p>
-				<section>
-					<h2>Lower the Barrier, Not Standards</h2>
-					<p>
-The feedback giver explained that he “used high standards” in evaluating the essays for publication in the teaching magazine. Still, he said, having read the student’s essay, he believed the student could meet those standards. His criticism, this form of feedback implies, was offered to help the student meet the publication’s high standards. Black students trusted this feedback as much as white students, and trusting it powerfully motivated them to improve their essay.
+                                        <blockquote cite="http://www.amazon.com/Whistling-Vivaldi-Stereotypes-Affect-Issues/dp/0393339726">
+                                                &ldquo;The feedback giver explained that he 'used high standards' in evaluating the essays for publication in the teaching magazine. Still, he said, having read the student’s essay, he believed the student could meet those standards. His criticism, this form of feedback implies, was offered to help the student meet the publication’s high standards. Black students trusted this feedback as much as white students, and trusting it powerfully motivated them to improve their essay.&rdquo;
+                                        </blockquote>
+                                        <p>
+                                        <strong>-- Claude Steele, Whistling Vivaldi</strong>
 					</p>
 				</section>
 
