adds a little credit to two helpful blog posts

--- a/index.html
+++ b/index.html
@@ -133,8 +133,24 @@
 					</ul>
 				</section>
 				</section>
+                                <section>
+					<h2>Credit!</h2>
+                                        <p>
+                                        A lot of this material came from my 
+                                        personal experience. However, much of 
+                                        it was annealed from conversations with 
+                                        colleagues throughout the scientific 
+                                        and computing communities (too many of 
+                                        you to name). I got some specific 
+                                        ideas for this particular talk 
+                                        from 
+                                        <a 
+                                          href="http://www.brandonsavage.net/encouraging-open-source-contribution">here</a>
+                                        and 
+                                        <a 
+                                          href="http://naramore.net/blog/why-people-don-t-contribute-to-os-projects-and-what-we-can-do-about-it">here</a>.
 
-
+                                        </section>
 			</div>
 
 		</div>
