--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
                                           href="http://naramore.net/blog/why-people-don-t-contribute-to-os-projects-and-what-we-can-do-about-it">here</a>.
 
                                         </section>
+                                  <section>
+                                  <h1>License</h2>
+                                  <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Attracting Diversity</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="katyhuff.github.io" property="cc:attributionName" rel="cc:attributionURL">Kathryn Huff</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://katyhuff.github.io/win_or_scipy" rel="dct:source">http://katyhuff.github.io/win_or_scipy</a>.
+                                  </section>
 			</div>
 
 		</div>
